--- a/config.toml
+++ b/config.toml
@@ -9,9 +9,26 @@ paginate = 5
   showMenuItems = 2
   showReadingTime = false
 
+  [[params.social]]
+    name = "github"
+    url  = "https://github.com/oldani"
+
+  [[params.social]]
+    name = "twitter"
+    url  = "https://twitter.com/ordanisanchez"
+
+  [[params.social]]
+    name = "email"
+    url  = "mailto:ordanisanchez@gmail.com"
+
+  [[params.social]]
+    name = "linkedin"
+    url  = "https://linkedin.com/in/ordanis/"
+
 [languages]
   [languages.en]
     title = "Ordanis Sanchez"
+    homeSubtitle = "A Python Backend Developer"
     subtitle = "Python Dev"
     keywords = ""
     copyright = ""
@@ -26,7 +43,7 @@ paginate = 5
     dateFormatList = "2006-01-02"
 
     [languages.en.params.logo]
-      logoText = "Welcome"
+      logoText = "$ cd /home"
       logoHomeLink = "/"
 
     [languages.en.menu]
@@ -34,3 +51,8 @@ paginate = 5
         identifier = "about"
         name = "About Me"
         url = "/about"
+      
+      [[languages.en.menu.main]]
+        identifier = "posts"
+        name = "Posts"
+        url = "/posts"
